--- a/style/style.css
+++ b/style/style.css
@@ -454,6 +454,7 @@ ul li a.item::after{
     margin-top: 150px;
     width: 100%;
     height: fit-content;
+    width: 100%;
 
     padding: 0px 5% 5% 5%;
     background-image: linear-gradient(90deg , #0e3959 0% , #0e3959 30% , #03a9f5 30% , #03a9f5 100%);
@@ -648,7 +649,7 @@ ul li a.item::after{
 }
 }
 
-@media (max-width:500px) {
+@media (max-width:900px) {
     .formBox .row50{
         flex-direction: column;
         width: 100%;
@@ -690,3 +691,116 @@ div.events{
 
 
 /* end of events  */
+
+
+
+/* question part  */
+
+#question{
+    height: fit-content;
+    width: 100%;
+    /* background-color: #d9f4f1; */
+    margin-top: 120px;
+}
+
+#question .question-container{
+    width: 100%;
+    display: flex;
+    flex-flow: wrap row;
+}
+
+#question .question-container .card-one{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    max-height: 90vh;
+}
+
+#question .question-container .card-one .text h2{
+    color: var(--main-color);
+    font-size: clamp(20px,5vw,2.5em);
+    margin-bottom: 0px;
+    font-weight: 400;
+    
+}
+#question .question-container .card-one .text p{
+    letter-spacing: 1px;
+    color: var(--main-hover-color);
+    opacity: 0.7;
+    transform: translateY(-7px);
+}
+
+#question .question-container .card-one .text h2 span{
+    font-weight: 800;
+    letter-spacing: 2px;
+}
+
+
+#question .question-container .card-one .image img{
+    width: 100%;
+    object-fit: cover;
+}
+
+
+/* card two  */
+#question .question-container .card-two{
+    height: 100%;
+    width: 50%;
+    padding: 150px 20px 20px 70px;
+}
+
+#question .question-container .card-two .question-part .text{
+    font-size: 20px;
+    font-weight: bold;
+    color: var(--main-color);
+    padding-right: 1em;
+    margin: 0;
+}
+#question .question-container .card-two .question-part .text label{
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+    align-items: center;
+    margin: 0;
+}
+
+#question .question-container .card-two .question-part input[type='checkbox']{
+    display: none;
+    opacity: 0;
+
+}
+
+
+/* hidden part style  */
+#question .question-container .card-two .question-part .hidden-part{
+    display: none;
+}
+
+#question .question-container .card-two .question-part input[type='checkbox']:checked + .hidden-part{
+    display: initial;
+}
+
+#question .question-container .card-two .question-part .hidden-part{
+    padding: 0px 10px;
+}
+
+#question .question-container .card-two .question-part .hidden-part p{
+    color: #888;
+    line-height: 1.5;
+    margin: 0;
+}
+
+#question .question-container .card-two hr{
+    border-color: #004654;
+    opacity: 0.5;
+}
+
+footer{
+    width: 100%;
+    background-color: var(--main-color);
+    height: 200px;
+    margin: 2rem auto 0 auto;
+    
+}
