--- a/style/style.css
+++ b/style/style.css
@@ -283,7 +283,7 @@ ul li a.item::after{
     margin-left: auto;
     margin-right: auto;
     margin-top: -2rem;
-    /* margin-bottom: 3rem; */
+    /* msargin-bottom: 3rem; */
     color: var(--main-color);
 }
 
