--- a/style/style.css
+++ b/style/style.css
@@ -321,6 +321,8 @@ ul li a.item::after{
     gap: 3rem;
     margin-bottom: 5rem;
 
+
+    
 }
 
 .about .container > div .text h1{
@@ -383,6 +385,19 @@ ul li a.item::after{
 
 }
 
+@keyframes motion-about {
+    from{
+        opacity: 0;
+        clip-path: inset(0 100% 0 0);
+    }
+    to{
+        opacity: 1;
+        clip-path: inset(0 0 0 0);
+    }
+}
+
+
+
 /* end of about  */
 
 /* start of phrase  */
@@ -411,8 +426,8 @@ ul li a.item::after{
     width: 70%;
     margin: auto;
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-    gap: 20px;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    gap: 30px;
     color: white;
     text-align: center;
     padding-bottom: 2rem;
@@ -530,6 +545,19 @@ ul li a.item::after{
     }
 }
 
+@media (max-width:700px){
+    .subscription .header-of-every-part
+    {
+        padding-left: 1rem;
+        padding-right: 1rem;
+        font-size: 3vw;
+    }
+    .subscription .paragraph-of-every-part{
+        padding-left: 1rem;
+        padding-right:1rem;
+    }
+
+}
 
 /* end of subscription  */
 
@@ -1123,7 +1151,7 @@ div.events{
 
 @media (max-width:678px){
     .timeline::before ,
-     .timeline::after {
+    .timeline::after {
         left: 20px;
         transform: translateX(-2px);
     }
@@ -1287,3 +1315,6 @@ footer{
     font-weight: bold;
 }
 /* end of footer  */
+
+
+
