--- a/style/style.css
+++ b/style/style.css
@@ -397,7 +397,7 @@ body{
     .main{
         flex-direction: column;
         height: fit-content;
-        padding-top: 0.2rem;
+        padding-top: 0;
     }
 }
 
